# RPG-Looter

./: .gitignore  3D_ENGINE_PLAN.md  3D_SYSTEM_GUIDE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  COLOR_COMPARISON.md  CUSTOM_GUI_SUMMARY.md  ENGINE_OVERLAY_DOCUMENTATION.md  ENGINE_OVERLAY_VISUAL_REFERENCE.md  FONT_IMPROVEMENTS.md  GPU_BUFFER_INFRASTRUCTURE.md  GPU_RAY_TRACER.md  IMGUI_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OVERLAY_FIX_SUMMARY.md  OVERLAY_TRANSFORMATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_2_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_SHADER_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_QUICK_START.md  PHASE_4_SUMMARY.txt  PLAYER_USAGE.md  RAY_TRACER_INTEGRATION.md  README.md  ROOM_AND_LIGHT_IMPLEMENTATION.md  STRIP_DOWN_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  TEXTURE_LOADING.md  UI_FIX_SUMMARY.md  UI_SYSTEM_README.md  UI_WIDGET_EXAMPLES.md  VERIFICATION_CHECKLIST.md  YELLOW_THEME_UPDATE.md  copy_dlls.bat  test_obj_loading.cpp
docs/: MESH_DOCUMENTATION.md  RENDERING_ANLEITUNG.md  integration_example.cpp  mesh_usage_examples.cpp
include/: Player.h
include/glad/: glad.h
include/sig/: sigslot.h
res/: input_config.json
res/config/: input_config.json
res/entities/: entities.json
res/fonts/: public-sans.json
res/models/: Meli.json  Silas.json  Test.mtl  Test_Sigma.json  cube.mtl
res/shaders/: ECS_shaders  Shader.shader  basic.shader  debug.shader  neuer_shader.shader  raytracer.comp
src/: AABB.h  AABBRenderer.cpp  AABBRenderer.h  AssetManager.cpp  AssetManager.h  AssetManagerWindow.cpp  AssetManagerWindow.h  AudioSystem.h  Audiomanager.cpp  Audiomanager.h  Audiosystem.cpp  BVH.h  Box.h  BufferLimits.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraUtils.h  CollisionSystem.cpp  CollisionSystem.h  CollisionUtils.h  Component.h  Components.h  ComputeShader.h  ConsoleWindow.cpp  ConsoleWindow.h  Debug.cpp  Debug.h  DebugWindow.cpp  DebugWindow.h  ECSSound.cpp  ESCSound.h  EditorSystem.cpp  EditorSystem.h  Entity.cpp  Entity.h  EntitySerializer.cpp  EntitySerializer.h  Entitymanager.cpp  (+81 more)
src/CustomGUI/: CustomGUI.cpp  CustomGUI.h  GUIContext.cpp  GUIContext.h  GUIDrawList.cpp  GUIDrawList.h  GUIRenderer.cpp  GUIRenderer.h  GUIStyle.cpp  GUIStyle.h  GUITypes.h  README.md  example_demo.cpp
src/EngineOverlay/: ConsoleWindow.cpp  ConsoleWindow.h  DebugUIWindow.cpp  DebugUIWindow.h  DrawList.cpp  DrawList.h  EngineOverlaySystem.cpp  EngineOverlaySystem.h  FontAtlas.cpp  FontAtlas.h  README.md  UIContext.cpp  UIContext.h  UIRenderer.cpp  UIRenderer.h  Widgets.cpp  Widgets.h
src/UI/: UIButton.cpp  UIButton.h  UIEvent.h  UILabel.cpp  UILabel.h  UIPanel.cpp  UIPanel.h  UIRenderer.cpp  UIRenderer.h  UISystem.cpp  UISystem.h  UIWidget.cpp  UIWidget.h
tests/: test_mesh.cpp
